testsuite/gsksl/errors/array-of-array-indexing-order.glsl
void
main  ()
{
  float[2][3] x;
  float[2] y;

  bool b = x[1] == y;
}
